--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Depends: R(>= 3.0)
 Imports: beanplot (>= 1.2),
          gplots (>= 3.0), 
          RColorBrewer (>= 1.1), 
-         stats (>= 3.0), 
+         stats (>= 3.0),
+         Matrix (>= 3.0),
          SummarizedExperiment (>= 1.6.5), 
          utils (>= 3.0)
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
