--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,17 +6,18 @@ Authors@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "c
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
     person("Manthan", "Shah", email = "shah@cshl.edu",role = c("ctb")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
-Description: MetaNeighbor allows users to quantify cell type replicability across 
+Description: MetaNeighbor allows users to quantify cell type replicability across
     datasets using neighbor voting.
 biocViews: GeneExpression, GO, MultipleComparison, SingleCell, Transcriptomics
 License: MIT + file LICENSE
 Depends: R(>= 3.0)
 Imports: beanplot (>= 1.2),
-         gplots (>= 3.0), 
-         RColorBrewer (>= 1.1), 
+         gplots (>= 3.0),
+         RColorBrewer (>= 1.1),
          stats (>= 3.0),
-         Matrix (>= 3.0),
-         SummarizedExperiment (>= 1.6.5), 
+         Matrix (>= 1.2),
+         matrixStats (>= 0.53.1),
+         SummarizedExperiment (>= 1.6.5),
          utils (>= 3.0)
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
 LazyData: true
