--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: MetaNeighbor allows users to quantify cell type replicability acros
 biocViews: GeneExpression, GO, MultipleComparison, SingleCell, Transcriptomics
 License: MIT + file LICENSE
 Depends: R(>= 3.0)
-Imports: beanplot (>= 1.2),
+Imports: Rcpp,
+         beanplot (>= 1.2),
          gplots (>= 3.0),
          RColorBrewer (>= 1.1),
          stats (>= 3.0),
@@ -20,6 +21,7 @@ Imports: beanplot (>= 1.2),
          SummarizedExperiment (>= 1.6.5),
          utils (>= 3.0)
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
+LinkingTo: Rcpp
 LazyData: true
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
